2010-09-29  Nick Gasson  <nick@nickg.me.uk>

	* src/display_cow.c (normal_setup, display_cow): Calculate
	maximum size of bubble to support word wrapping.
	* src/bubblegen.c (make_text_bubble): Use Pango to word-wrap
	text that is too wide to fit in the bubble.
	* src/xcowsay.c (main): Add --no-wrap option to disable word
	wrapping.
	* xcowsay.6: Document new word wrapping feature.

2010-09-28  Nick Gasson  <nick@nickg.me.uk>

	* configure.ac: Place install prefix in config.h rather than on
	the command line. This fixes a bug where code would not be
	rebuilt if the prefix changed.

2010-08-28  Nick Gasson  <nick@nickg.me.uk>

	* configure.ac: Fix bug where --disable-dbus would still define
	WITH_DBUS.

	* src/display_cow.c (normal_setup): time=0 means display
	forever.
	* xcowsay.6: Document new time=0 feature.

2010-01-05  Nick Gasson  <nick@nickg.me.uk>

	* xcowsay 1.2 released!

	* src/cowsayd.c (cowsay_dream): New DBus method to implement
	uk.me.doof.Cowsay.Dream
	* src/xcowsay.c (main): Make dream path absolute for daemon and
	check file exists before going further.

2010-01-04  Nick Gasson  <nick@nickg.me.uk>

	* src/xcowsay.c (main): Add --bubble-at option to change
	relative location of speech bubble.
	* src/display_cow.c (display_cow): Use bubble_x and bubble_y
	config variables to alter relative location of bubble.

	* src/config_file.c (parse_config_file): Allow the config file
	to be placed in $XDG_CONFIG_HOME/xcowsayrc as well as
	$HOME/.xcowsayrc.

	* src/xcowsay.c (main): Add --config option to specify and
	additional config file to parse.
	* src/config_file.c (config_file_name): Support parsing the
	additional config file.

	* src/config_file.c (next_token): Fix parsing config files where
	there is no whitespace between tokens.

	* src/bubblegen.c (make_text_bubble): Don't print a warning when
	we can't parse Pango attributes.  This may arise from valid
	input e.g. '1 < 0'.

	* src/xcowsayd.c (cow_display_thread, wait_for_request)