@@ -1,3 +1,10 @@
+2010-10-23  Nick Gasson  <nick@nickg.me.uk>
+
+	* src/bubblegen.c (bubble_init): Add a function to generate
+	left-handed bubbles.
+	* src/xcowsay.c (main): Add --left option to put bubble on
+	the left of the cow.
+
 2010-09-29  Nick Gasson  <nick@nickg.me.uk>
 
 	* src/display_cow.c (normal_setup, display_cow): Calculate
